--- a/views/leader_selection.ejs
+++ b/views/leader_selection.ejs
@@ -1,10 +1,11 @@
 <main class="club-leader-selection-main">
   <section class="club-leader-selection-section">
+    <div class="club-leader-selection-animated-bg"></div>
     <div class="club-leader-selection-container">
-      <h2 class="club-leader-selection-title">Select Club Leaders</h2>
+      <h2 class="club-leader-selection-title">Select Club Leaders <span class="emoji">🫡</span></h2>
       <form class="club-leader-selection-form" method="POST" action="/clubs/update_leader">
         <div class="club-leader-selection-group">
-          <label for="club-leader-selection-captain" class="club-leader-selection-label">Captain</label>
+          <label for="club-leader-selection-captain" class="club-leader-selection-label">Captain <span class="emoji">⭐</span></label>
           <select id="club-leader-selection-captain" name="captain" class="club-leader-selection-select" required>
             <option disabled selected>--select--</option>
             <% user.players.forEach(player => { %>
@@ -13,7 +14,7 @@
           </select>
         </div>
         <div class="club-leader-selection-group">
-          <label for="club-leader-selection-vicecap" class="club-leader-selection-label">Vice Captain</label>
+          <label for="club-leader-selection-vicecap" class="club-leader-selection-label">Vice Captain <span class="emoji">🌟</span></label>
           <select id="club-leader-selection-vicecap" name="vice_captain" class="club-leader-selection-select" required>
             <option disabled selected>--select--</option>
             <% user.players.forEach(player => { %>
@@ -22,13 +23,13 @@
           </select>
         </div>
         <div class="club-leader-selection-group">
-          <label for="club-leader-selection-wicketkeeper" class="club-leader-selection-label">Wicket Keeper</label>
+          <label for="club-leader-selection-wicketkeeper" class="club-leader-selection-label">Wicket Keeper <span class="emoji">🧤</span></label>
           <select id="club-leader-selection-wicketkeeper" name="wicket_keeper" class="club-leader-selection-select" required>
             <option disabled selected>--select--</option>
             <% user.players.forEach(player => { %>
-             <% if (player.type === 'wicket_keeper') { %>
-              <option value="<%= player._id %>"><%= player.name %></option>
-             <% } %>
+              <% if (player.type === 'wicket_keeper') { %>
+                <option value="<%= player._id %>"><%= player.name %></option>
+              <% } %>
             <% }) %>
           </select>
         </div>
